cmake_minimum_required(VERSION 3.17)
project(DCP5301___DSA_FInal_Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(DCP5301___DSA_FInal_Project
        .idea/.gitignore
        .idea/.name
        ".idea/DCP5301 - DSA FInal Project.iml"
        .idea/discord.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        Assignment.cpp
        Assignment.exe)
